--- a/app/src/main/res/drawable/ic_vec_logout.xml
+++ b/app/src/main/res/drawable/ic_vec_logout.xml
@@ -1,12 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="512dp"
-    android:height="512dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512">
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M255.15,468.625H63.787c-11.737,0 -21.262,-9.526 -21.262,-21.262V64.638c0,-11.737 9.526,-21.262 21.262,-21.262H255.15c11.758,0 21.262,-9.504 21.262,-21.262S266.908,0.85 255.15,0.85H63.787C28.619,0.85 0,29.47 0,64.638v382.724c0,35.168 28.619,63.787 63.787,63.787H255.15c11.758,0 21.262,-9.504 21.262,-21.262C276.412,478.129 266.908,468.625 255.15,468.625z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M505.664,240.861L376.388,113.286c-8.335,-8.25 -21.815,-8.143 -30.065,0.213s-8.165,21.815 0.213,30.065l92.385,91.173H191.362c-11.758,0 -21.262,9.504 -21.262,21.262c0,11.758 9.504,21.263 21.262,21.263h247.559l-92.385,91.173c-8.377,8.25 -8.441,21.709 -0.213,30.065c4.167,4.21 9.653,6.336 15.139,6.336c5.401,0 10.801,-2.041 14.926,-6.124l129.276,-127.575c4.04,-3.997 6.336,-9.441 6.336,-15.139C512,250.302 509.725,244.88 505.664,240.861z"/>
+<vector android:height="24dp" android:viewportHeight="320"
+    android:viewportWidth="320" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#000000"
+        android:pathData="M67,21.4c-5.7,2 -11.2,4.7 -12.7,6.2 -0.8,0.8 -1.9,1.4 -2.4,1.4 -1,-0 -10.1,8.8 -13.1,12.7 -1.8,2.3 -4.1,7 -6.4,13.3 -2,5.2 -2,204.8 0,210 2.3,6.3 4.6,11 6.4,13.3 3,3.9 12.1,12.7 13.1,12.7 0.5,-0 1.6,0.6 2.3,1.3 1.5,1.5 8.7,5 13.7,6.6 2.3,0.7 17.9,1.1 47.8,1.1 37.2,-0 44.7,-0.2 45.9,-1.4 0.8,-0.8 1.4,-1.9 1.4,-2.5 0,-0.6 0.5,-1.1 1,-1.1 1.5,-0 1.2,-5.9 -0.4,-7.6 -0.8,-0.7 -1.6,-1.9 -1.8,-2.6 -0.4,-1 -9.3,-1.4 -40.6,-1.6 -25,-0.2 -40.2,-0.6 -40.2,-1.2 0,-0.6 -1.7,-1 -3.7,-1 -4.7,-0 -11.3,-1.8 -11.3,-3 0,-0.6 -0.6,-1 -1.4,-1 -3.7,-0 -13.6,-12.5 -14.3,-18 -0.3,-2.2 -1,-4 -1.4,-4 -1.2,-0 -1.2,-189.7 0,-190.4 0.4,-0.3 1.1,-2.2 1.4,-4.1 0.9,-5.3 10.8,-17.5 14.3,-17.5 0.8,-0 1.4,-0.4 1.4,-1 0,-1.2 6.6,-3 11.3,-3 2,-0 3.7,-0.5 3.7,-1 0,-0.6 14,-1 39.9,-1 35.9,-0 40.1,-0.2 41.6,-1.7 4.2,-4.1 4.2,-11 0,-13.7 -2.1,-1.4 -8,-1.6 -47.2,-1.5 -32.3,0.1 -45.8,0.4 -48.3,1.3z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#000000"
+        android:pathData="M223.8,103c-1.9,2.1 -2.8,4.1 -2.8,6.4 0,3 1.9,5.2 19.1,22.5l19,19.1 -81.5,-0 -81.5,-0 -2.6,2.5c-3.6,3.7 -3.5,10 0.2,13.2l2.6,2.3 81.9,-0 82,-0 -2.9,2.4c-1.5,1.3 -10.3,9.9 -19.5,19.1 -15,15.1 -16.8,17.2 -16.8,20.2 0,4.8 4.5,9.3 9.3,9.3 2,-0 4.6,-0.8 5.8,-1.7 1.1,-1 13.5,-13.2 27.5,-27.2l25.4,-25.4 0,-5.7 0,-5.7 -25.4,-25.4c-14,-14 -26.4,-26.2 -27.5,-27.2 -3.4,-2.8 -9.1,-2.2 -12.3,1.3z" android:strokeColor="#00000000"/>
 </vector>
