--- a/app/src/main/res/layout/activity_play_favorite.xml
+++ b/app/src/main/res/layout/activity_play_favorite.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.PlayEpisodeActivity">
+    tools:context=".activities.PlayFavoriteActivity">
 
     <include
         layout="@layout/mk_player"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/playEpisode_banner" />
+        android:layout_above="@id/playFavEpisode_banner" />
 
     <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/playEpisode_banner"
+        android:id="@+id/playFavEpisode_banner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
