--- a/app/src/main/res/layout/cust_fav_layout.xml
+++ b/app/src/main/res/layout/cust_fav_layout.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/custEpi_cv"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="8dp"
     android:layout_marginTop="3dp"
     android:layout_marginRight="8dp"
     android:layout_marginBottom="3dp"
+    android:clickable="true"
     android:elevation="2dp"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="10dp"
     tools:targetApi="lollipop">
 
@@ -29,7 +29,7 @@
             android:src="@drawable/demo" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_margin="5dp"
@@ -51,5 +51,12 @@
                 android:text="Pakistan" />
 
         </LinearLayout>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_vec_delete" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
