--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".fragment.FavoriteFragment">
 
-    <TextView
-        android:id="@+id/favoriteLoading_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Loading..."
-        android:textAlignment="center" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favorite_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/cust_fav_layout" />
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/favorite_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="No favorite drama found"
+        android:textColor="#FF9800"
+        android:textSize="18sp" />
+</RelativeLayout>
