--- a/app/src/main/res/layout/fragment_dramas.xml
+++ b/app/src/main/res/layout/fragment_dramas.xml
@@ -5,9 +5,16 @@
     android:layout_height="match_parent"
     tools:context=".fragment.DramasFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/season_rv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/cust_season_layout" />
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/season_refLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/season_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/cust_season_layout" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </LinearLayout>
