--- a/app/src/main/res/layout/activity_episode.xml
+++ b/app/src/main/res/layout/activity_episode.xml
@@ -5,8 +5,16 @@
     android:layout_height="match_parent"
     tools:context=".activities.EpisodeActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/episode_rv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/episode_refreshLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/episode_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </RelativeLayout>
