--- a/app/src/main/res/layout/cust_episode_layout.xml
+++ b/app/src/main/res/layout/cust_episode_layout.xml
@@ -18,33 +18,28 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="260dp">
+        android:layout_height="wrap_content">
 
-        <RelativeLayout
-            android:id="@+id/custEpi_rl1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <LinearLayout
+            android:id="@+id/episode_youtube_player_view_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/custEpi_iv"
+            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+                android:id="@+id/episode_youtube_player_view"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/video_placeholder" />
-
-            <ProgressBar
-                android:id="@+id/custEpi_pb"
-                style="@android:style/Widget.Material.Light.ProgressBar.Small.Inverse"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true" />
-        </RelativeLayout>
+                app:autoPlay="false"
+                app:showFullScreenButton="false"
+                app:showYouTubeButton="false" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/custEpi_episodeName_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/custEpi_rl1"
+            android:layout_below="@id/episode_youtube_player_view_ll"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:text="Episode no 1"
@@ -77,7 +72,7 @@
             android:id="@+id/custEpisode_fav_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/custEpi_rl1"
+            android:layout_below="@id/episode_youtube_player_view_ll"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="5dp"
