--- a/app/src/main/res/layout/cust_episode_layout.xml
+++ b/app/src/main/res/layout/cust_episode_layout.xml
@@ -20,26 +20,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/episode_youtube_player_view_ll"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
-            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
-                android:id="@+id/episode_youtube_player_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:autoPlay="false"
-                app:showFullScreenButton="false"
-                app:showYouTubeButton="false" />
-        </LinearLayout>
+        <ImageView
+            android:id="@+id/custEpi_iv"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/video_placeholder" />
 
         <TextView
             android:id="@+id/custEpi_episodeName_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/episode_youtube_player_view_ll"
+            android:layout_below="@id/custEpi_iv"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:text="Episode no 1"
@@ -57,22 +50,11 @@
             android:text="Drama name"
             android:textSize="12sp" />
 
-        <!--        <ImageView-->
-        <!--            android:id="@+id/custEpisode_download_iv"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_below="@id/custEpi_rl"-->
-        <!--            android:layout_alignParentEnd="true"-->
-        <!--            android:layout_margin="10dp"-->
-        <!--            android:background="@drawable/shape_light_white"-->
-        <!--            android:padding="5dp"-->
-        <!--            android:src="@drawable/ic_vec_download" />-->
-
         <ImageView
             android:id="@+id/custEpisode_fav_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/episode_youtube_player_view_ll"
+            android:layout_below="@id/custEpi_iv"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="5dp"
