--- a/app/src/main/res/layout/cust_fav_layout.xml
+++ b/app/src/main/res/layout/cust_fav_layout.xml
@@ -20,26 +20,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/custFav_youtube_player_view_ll"
+        <ImageView
+            android:id="@+id/custFav_iv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
-                android:id="@+id/custFav_youtube_player_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:autoPlay="false"
-                app:showFullScreenButton="false"
-                app:showYouTubeButton="false" />
-        </LinearLayout>
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/video_placeholder" />
 
         <TextView
             android:id="@+id/custFav_episodeName_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/custFav_youtube_player_view_ll"
+            android:layout_below="@id/custFav_iv"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:text="Episode no 1"
@@ -61,7 +53,7 @@
             android:id="@+id/custFav_delete_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/custFav_youtube_player_view_ll"
+            android:layout_below="@id/custFav_iv"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="5dp"
